# brn-software-renderer

./: .gitignore  CMakeLists.txt  README.md
include/: BrnRenderer.hpp
include/Mathematics/: Mesh.hpp  Plane.hpp  Triangle.hpp  Vector2.hpp  Vector3.hpp  Vertex.hpp
include/Renderer/: Clipping.hpp  Colour.hpp  Projection.hpp  Rotation.hpp
src/: BrnRenderer.cpp  main.cpp
src/Mathematics/: Mesh.cpp  Plane.cpp  Triangle.cpp
src/Renderer/: Clipping.cpp  Projection.cpp  Rotation.cpp
